CHANGES
=======

* Improve logging messages
* Clean up orphan IPSets every time when agent boots
* Reduce ipset size by reconciling, fix port-not-found exception, fix special case revision detection
* Moved inventory\_sync to own intervalloop, caused timeout for agent report\_state
* Fix update of group members if remote security group is self-referencing
* Silence exceptions caused by missing ports in neutron
* Add timeout to operation scheduler
* revert logical switch delay
* Don't retry ObjectNotFound SGs
* fix re-schedule of missing dependencies
* Ignore trunk-ports for which nsx-t is not responsible
* safeguard mgmt cleanup
* fix bug where mgmt-api sections where deleted although not yet synced to policy api
* Drop trunk\_update(), as this CB is not needed
* check existance of logical switch before creating it, thus saving some delay
* Detect Migration Mode: migrate mgmt sgs to policy api, but hold realization queue low and prefer urgent updates
* remove old 2.4+policy workaround
* Wait for 10 seconds after logical-switch creation
* fix imports
* Add monkey patch
* Wait for LS state to become success on port binding
* removed pre-nsx-t 2.4 workarounds, nsxv3\_use\_policy\_api for override policy-usage-decision
* Automatic switch between Management and Policy APIs
* Pass object via id to ObjectNotFound
* use correct import for neutron exceptions
* Don't double-lock for mgmt-api
* Ability so switch between NSX Management and Policy APIs
* fix typo
* Autodiscover NSX-T Version and use quirks, reschedule retry on AtomicRequest Error
* Raise ObjectNotFound as expected exception on server
* Add legacy support for deleting Policies via DELETE
* Use fresh request session for login
* Retry for The object AtomicRequest exceptions with nsx-t 2.4
* Don't retry in policy \_login function, mitigating recursive lock
* limit amount of orphans to delete per sync loop
* added iterative (non-declarative) way to delete orphaned services
* omit serivce deletion