@@ -1,9 +1,9 @@
+import argparse
 import os
 import re
 import sys
 import traceback
 import uuid
-import argparse
 
 import netaddr
 import oslo_messaging
@@ -15,11 +15,12 @@ from networking_nsxv3.plugins.ml2.drivers.nsxv3.agent import (
     provider_nsx_mgmt, provider_nsx_policy, realization)
 from networking_nsxv3.prometheus import exporter
 from neutron.common import config as common_config
-from neutron.common import profiler, topics
+from neutron.common import profiler
 from neutron.plugins.ml2.drivers.agent import _agent_manager_base as amb
 from neutron.plugins.ml2.drivers.agent import _common_agent as ca
 from neutron_lib import context as neutron_context
 from neutron_lib import exceptions
+from neutron_lib.agent import topics
 from neutron_lib.api.definitions import portbindings
 from oslo_config import cfg
 from oslo_log import log as logging
@@ -116,7 +117,7 @@ class NSXv3Manager(amb.CommonAgentManagerBase):
             legacy_provider=legacy_provider)
 
         self.synchronizer = loopingcall.FixedIntervalLoopingCall(\
-            self.realizer.all)
+            self._sync_all)
         if synchronization:
             self.synchronizer.start(interval=cfg.CONF.AGENT.polling_interval)
 
@@ -124,6 +125,12 @@ class NSXv3Manager(amb.CommonAgentManagerBase):
             eventlet.greenthread.spawn(exporter.nsxv3_agent_exporter, 
                                        self.runner)
     
+    def _sync_all(self):
+        try:
+            self.realizer.all()
+        except Exception as err:
+            LOG.error(err)
+
     def _sync_immediate(self, os_ids, realizer):
         ids = list(os_ids) if isinstance(os_ids, set) else os_ids
         ids = ids if isinstance(ids, list) else [ids]
