@@ -102,12 +102,10 @@ class AgentRealizer(object):
             current += p.age(p.SG_MEMBERS, sgm_outdated)
             current += p.age(p.QOS, qos_current)
 
-            def compare(a,b):
-                ar = int(a[2]) if a[2].isdigit() else 0
-                br = int(b[2]) if b[2].isdigit() else 0
-                return ar - br
+            def get_rev(o):
+                return int(o[2]) if o[2].isdigit() else 0
 
-            current = sorted(current, cmp=compare)
+            current = sorted(current, key=get_rev)
 
             if len(current) > slice:
                 current = set(itertools.islice(current, slice))
