@@ -1,21 +1,15 @@
-from neutron_lib.callbacks import resources
-from oslo_log import log
-
+from networking_nsxv3.api import rpc as nsxv3_rpc
+from networking_nsxv3.common import constants as nsxv3_constants
+from networking_nsxv3.services.qos.drivers.nsxv3 import qos as nsxv3_qos
+from networking_nsxv3.services.trunk.drivers.nsxv3 import trunk as nsxv3_trunk
+from neutron.agent import securitygroups_rpc
 from neutron.db import provisioning_blocks
 from neutron.plugins.ml2.drivers import mech_agent
-from neutron.agent import securitygroups_rpc
-
-from neutron_lib import context
+from neutron_lib import context, rpc
 from neutron_lib.api.definitions import portbindings
+from neutron_lib.callbacks import resources
 from neutron_lib.plugins.ml2 import api
-
-from neutron.common import rpc
-
-
-from networking_nsxv3.common import constants as nsxv3_constants
-from networking_nsxv3.api import rpc as nsxv3_rpc
-from networking_nsxv3.services.trunk.drivers.nsxv3 import trunk as nsxv3_trunk
-from networking_nsxv3.services.qos.drivers.nsxv3 import qos as nsxv3_qos
+from oslo_log import log
 
 LOG = log.getLogger(__name__)
 
@@ -60,7 +54,7 @@ class VMwareNSXv3MechanismDriver(mech_agent.SimpleAgentMechanismDriverBase):
         self.trunk = nsxv3_trunk.NSXv3TrunkDriver.create()
         self.qos = nsxv3_qos.NSXv3QosDriver.create(self.rpc)
 
-        conn = rpc.create_connection()
+        conn = rpc.Connection()
         conn.create_consumer(nsxv3_constants.NSXV3_SERVER_RPC_TOPIC,
                              [nsxv3_rpc.NSXv3ServerRpcCallback()],
                              fanout=False)
