@@ -1,17 +1,12 @@
+from networking_nsxv3.common import constants as nsxv3_constants
+from neutron.services.trunk.drivers import base
+from neutron_lib import constants, context
+from neutron_lib.api.definitions import port, portbindings
+from neutron_lib.callbacks import events, registry, resources
+from neutron_lib.plugins import directory
+from neutron_lib.services.trunk import constants as trunk_consts
 from oslo_config import cfg
 from oslo_log import log as logging
-
-from neutron.services.trunk import constants as trunk_consts
-from neutron.services.trunk.drivers import base
-from neutron_lib.api.definitions import portbindings
-from neutron_lib.api.definitions import port
-from neutron_lib.callbacks import events
-from neutron_lib.callbacks import registry
-from neutron_lib.plugins import directory
-from neutron_lib import context
-from neutron_lib import constants
-
-from networking_nsxv3.common import constants as nsxv3_constants
 
 LOG = logging.getLogger(__name__)
 
@@ -34,7 +29,7 @@ class NSXv3TrunkDriver(base.DriverBase):
     @classmethod
     def create(cls):
         SUPPORTED_INTERFACES = (portbindings.VIF_TYPE_OVS,)
-        SUPPORTED_SEGMENTATION_TYPES = (trunk_consts.VLAN,)
+        SUPPORTED_SEGMENTATION_TYPES = (trunk_consts.SEGMENTATION_TYPE_VLAN,)
         return cls(
             nsxv3_constants.NSXV3,
             SUPPORTED_INTERFACES,
@@ -43,7 +38,7 @@ class NSXv3TrunkDriver(base.DriverBase):
             can_trunk_bound_port=True
         )
 
-    @registry.receives(trunk_consts.TRUNK_PLUGIN, [events.AFTER_INIT])
+    @registry.receives(resources.TRUNK_PLUGIN, [events.AFTER_INIT])
     def register(self, resource, event, trigger, payload=None):
         LOG.info("NSXv3 trunk driver initializing ...")
         super(
