@@ -2,15 +2,13 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
-neutron==12.1.1 # Apache-2.0
+neutron==16.3.1 # Apache-2.0
 hacking!=0.13.0,<0.14,>=0.12.0 # Apache-2.0
 coverage!=4.4,>=4.0 # Apache-2.0
 ddt>=1.0.1 # MIT
 fixtures>=3.0.0 # Apache-2.0/BSD
 mock>=2.0.0 # BSD
 mox3>=0.20.0 # Apache-2.0
-psycopg2>=2.6.2 # LGPL/ZPL
-PyMySQL>=0.7.6 # MIT License
 python-barbicanclient!=4.5.0,!=4.5.1,>=4.0.0 # Apache-2.0
 python-ironicclient>=2.2.0 # Apache-2.0
 requests-mock>=1.1.0 # Apache-2.0
@@ -24,7 +22,6 @@ osprofiler>=1.4.0 # Apache-2.0
 testresources>=2.0.0 # Apache-2.0/BSD
 testscenarios>=0.4 # Apache-2.0/BSD
 testtools>=2.2.0 # MIT
-testrepository>=0.0.18
-responses>=0.13.2
-requests
-
+testrepository>=0.0.18 # Apache-2.0/BSD
+responses>=0.10.15 # Apache-2.0
+requests>=2.23.0 # Apache-2.0
