@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.1
-envlist = py{27},functional,pep8,pip-missing-reqs
+envlist = py{36},functional,pep8,pip-missing-reqs
 skipsdist = True
 
 [testenv]
@@ -17,7 +17,7 @@ setenv = VIRTUAL_ENV={envdir}
          OS_STDOUT_CAPTURE=1
          OS_STDERR_CAPTURE=1
          OS_TEST_TIMEOUT=160
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/queens}
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/ussuri}
        -r{toxinidir}/test-requirements.txt 
        -r{toxinidir}/requirements.txt
 commands = 
@@ -26,8 +26,8 @@ passenv = OS_DEBUG GENERATE_HASHES
 # there is also secret magic in subunit-trace which lets you run in a fail only
 # mode. To do this define the TRACE_FAILONLY environmental variable.
 
-[testenv:py27]
-basepython = python2.7
+[testenv:py36]
+basepython = python3.6
 commands =
     {[testenv]commands}
     stestr run '{posargs}'
@@ -35,7 +35,7 @@ commands =
     stestr slowest
 
 [testenv:pep8]
-basepython = python2.7
+basepython = python3.6
 deps = {[testenv]deps}
 commands =
   bash tools/flake8wrap.sh {posargs}
